selfhost/test/typechecker/lambda/error_type_mismatch.2.out
Error at %FILE_NAME%:1:32
Return type mismatch for lambda function
  |  val f: (Int) => Int = (a) => a + 0.1
                                    ^
Expected Int
but instead found Float
