selfhost/test/typechecker/lambda/error_type_mismatch.2.abra
val f: (Int) => Int = (a) => a + 0.1